--- a/css/base.css
+++ b/css/base.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: 'ZenHand';
-  src: url('zenhand.ttf') format('truetype');
+  src: url('zenhand2.ttf') format('truetype');
 }
 body {
   margin: 0;
