--- a/css/base.css
+++ b/css/base.css
@@ -147,8 +147,9 @@ a:focus-visible {
   font-weight: 900;
 }
 
-.frame__title-main {
+.frame__title-main a {
   font-weight: 900;
+  color: var(--color-text);
   font-size: 2.5vh;
 }
 
